# Biofloc-Firmware-ROS

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT_v3.2.0.md  DOCUMENTATION_INDEX.md  FIRMWARE_v3.1.1_ANTI_BOOTLOOP.md  GUIA_PASO_A_PASO.md  INSTRUCCIONES_AGENT_RPI.sh  PROJECT_ORGANIZATION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REFACTOR_v4.0.0_SUMMARY.md  RELEASE_v4.0.0_READY.md  SECURITY.md  START_HERE.md  TECHNICAL_SUMMARY.md  biofloc_manager.py  calibration_3point_result.txt  calibration_result.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.example  sdkconfig.old.backup  start_agent_rpi.sh
config/: README.md  db_bridge_config.yaml
docs/: CALIBRATION.md  DIGITAL_TWIN_ARCHITECTURE.md  DYNAMIC_CONFIG.md  DYNAMIC_CONFIG_SUMMARY.md  REMOTE_CALIBRATION.md  SECURITY.md  TROUBLESHOOTING.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.c.v3.6.5.backup  sensors.c  sensors.h
main/app/: sensor_task.c  sensor_task.h
main/core/: app_state.c  app_state.h  config.h  types.h
main/drivers/: wifi_manager.c  wifi_manager.h
main/hal/sensors/: sensors.c  sensors.h
main/middleware/: config_manager.c  config_manager.h  data_aggregator.c  data_aggregator.h
main/middleware/calibration/: calibration_handler.c  calibration_handler.h
main/middleware/uros/: uros_manager.c  uros_manager.h
scripts/: calibrate_ph.py  calibrate_ph_3points.py  calibrate_ph_fixed_time.py  calibrate_ph_v2.py  calibrate_temperature.py  check_esp32_health.py  check_mongodb.py  check_ph_cycles.py  configure_device.py  diagnose_ph.py  fix_voltage_divider.py  migrate_to_devices_collection.py  monitor_sensores.py  monitor_temperature.py  monitor_voltage.py  send_calibration_direct.py  sensor_db_bridge.py  start_gateway_system.sh  temperature_calibration_result.txt  (+4 more)
(+26 files in other folders)
